# SearchClaw

./: .gitignore  LICENSE  README.md  pyproject.toml
baseline/react/: README.md  agent.py  results.jsonl  run_benchmark.py
config/: settings.yaml
docs/: technical_report.md
scripts/: setup_chrome_cdp.sh
src/: main.py
src/cli/: __init__.py  app.py  config.py  mentions.py  query.py  runtime.py  theme.py
src/cli/tui/: __init__.py  app.py  styles.tcss  widgets.py
src/core/: compact.py  context.py  loop.py  tool.py  types.py
src/hooks/: builtin_hooks.py  engine.py
src/llm/: client.py
src/memory/: extract.py  retrieval.py  store.py  types.py
src/skills/: __init__.py  loader.py
src/tools/: academic_search.py  ask_user.py  cite_source.py  deep_read.py  doc_extract.py  exa_search.py  local_common.py  local_glob.py  local_read.py  local_search.py  news_search.py  research_plan.py  run_skill_script.py  use_skill.py  web_fetch.py  web_search.py  wechat_search.py
src/utils/: browser_fetch.py  browser_manager.py  browser_search.py  content_extractor.py  docx_export.py  html_to_markdown.py  rate_limiter.py  session_storage.py  token_counter.py  url_validator.py
src/web/: router.py
src/web/static/: app.js  index.html  style.css
tests/: test_browser.py
