[project]
name = "searchclaw"
version = "0.4.0"
description = "An agentic web research tool that searches, reads, and synthesizes well-cited answers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "trafilatura>=1.12.0",
    "markdownify>=0.13.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "aiolimiter>=1.1.0",
    "rich>=13.0",
    "textual>=0.80",
    "pdfplumber>=0.11",
    "pypandoc_binary>=1.13",
]

[project.scripts]
searchclaw = "src.cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]
browser = [
    "playwright>=1.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
